# simplestAI

./: .NetrwMessage.swp  .clangd  .generateemnist.cpp.swp  .gitattributes  .gitignore  .swn  .swo  .swp  .traindata.txt.swp  1  1.prof  1.txt  2  3  4  5  6  6.1  9  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  LICENSE  NN.cpp  NN.hpp  README.md  a  adam.cpp  adam.hpp  average_layer.cpp  average_layer.hpp  bias_layer.cpp  bias_layer.hpp  cl-mat.cpp  cl-mat.hpp  clGetErrorString.cpp  clGetErrorString.hpp  compile_flags.txt  convolution.cpp  convolution.hpp  (+75 more)
buildninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake
buildninja/Debug/: drawdata  generate  generateemnist  learnpicture  readdata  test-cl-matrix  train  trainemnist  trainmnist
buildninja/RelWithDebInfo/: drawdata  generate  generateemnist  learnpicture  readdata  test-cl-matrix  train  trainemnist  trainmnist
buildninja/Release/: drawdata  generate  generateemnist  learnpicture  readdata  test-cl-matrix  train  trainemnist  trainmnist
buildxcode/: CMakeCache.txt  cmake_install.cmake
buildxcode/CMakeScripts/: ReRunCMake.make
buildxcode/Debug/: drawdata  generate  generateemnist  learnpicture  readdata  test-cl-matrix  train  trainemnist  trainmnist
buildxcode/myAI.xcodeproj/: project.pbxproj
buildxcode/myAI.xcodeproj/project.xcworkspace/xcuserdata/jiang.xcuserdatad/: UserInterfaceState.xcuserstate
buildxcode/myAI.xcodeproj/xcuserdata/jiang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
buildxcode/myAI.xcodeproj/xcuserdata/jiang.xcuserdatad/xcschemes/: xcschememanagement.plist
convolution/: NN.cpp  NN.hpp  bias_layer.cpp  bias_layer.hpp  convolution.cpp  convolution.hpp  convolution_layer.cpp  convolution_layer.hpp  func_layer.cpp  func_layer.hpp  generate.cpp  layers.hpp  main.cpp  makefile  matrix_layer.cpp  matrix_layer.hpp
oldcode/: data.cpp  function.hpp  generate.cpp  generateemnist.cpp  handwritemnist.net  layer.hpp  picturelearning.cpp  testomp.cpp  train1.cpp  trainemnist.cpp
olddata/: 0  4  7  8  README.md  generate  generate.cpp
